--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 	<div class="menu">
 		<ul>
-			<li class="navItem">Home</li>
-			<li class="navItem">Top</li>
-			<li class="navItem">About</li>
+			<a href=""><li class="navItem">Home</li></a>
+			<a href=""><li class="navItem">Top</li></a>
+			<a href=""><li class="navItem">About</li></a>
 		</ul>
 			<input class="seachField" type="text" name="search">
 			<button>Search</button>
@@ -20,64 +20,162 @@
 		<div class="infoPane" id="lastAvailable">
 			<h3 class="infoHeader">Siste tilgjengeliggjorte</h3>
 			
+			<a href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
 				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
 			</div>
+			</a>
 
-
+			<a href="">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
 				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
 			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Vår i Mummidalen</p>
+				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
+			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Monty Python and the Holy Grail</p>
+				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Brian De Palma</p>
+				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+			</div>
+			</a>
 
 		</div>
 
+
+
 		<div class="infoPane" id="lastLoaned">
 			<h3 class="infoHeader">Siste lånte</h3>
-			
+
+			<a href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
 				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
 			</div>
+			</a>
 
-
+			<a href="">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
 				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
 			</div>
-			
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Vår i Mummidalen</p>
+				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
+			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Monty Python and the Holy Grail</p>
+				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Brian De Palma</p>
+				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+			</div>
+			</a>
+
 		</div>
 
 		<div class="infoPane" id="recommended">
 			<h3 class="infoHeader">Anbefalinger</h3>
 			
+			<a href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
 				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
 			</div>
+			</a>
 
-
+			<a href="">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
 				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
 			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Vår i Mummidalen</p>
+				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
+			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Monty Python and the Holy Grail</p>
+				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Brian De Palma</p>
+				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+			</div>
+			</a>
 
 		</div>
 
 		<div class="infoPane" id="routines">
 			<h3 class="infoHeader">Rutiner for lån</h3>
 			
+			<a href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
 				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
 			</div>
+			</a>
 
-
+			<a href="">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
 				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
 			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Vår i Mummidalen</p>
+				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
+			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Monty Python and the Holy Grail</p>
+				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+			</div>
+			</a>
+
+			<a href="">
+			<div class="film">
+				<p class="filmTittel">Brian De Palma</p>
+				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+			</div>
+			</a>
 
 		</div>
 
