Styled the search field
Changed the appearance of the search field and did some minor changes to the menu.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="menu">
+	<nav class="menu">
 		<ul>
 			<a href=""><li class="navItem">Home</li></a>
 			<a href=""><li class="navItem">Top</li></a>
 			<a href=""><li class="navItem">About</li></a>
+			<li class="right-menu-item">
+				<div id="search-wrapper">
+					<input id="search-field" type="text" name="search-field">
+					<button id="search-button">Search</button>
+				</div>
+			</li>
 		</ul>
-			<input class="seachField" type="text" name="search">
-			<button>Search</button>
-	</div>
+	</nav>
 
 
 	<main>
