Added some responsiveness to the menu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<nav class="menu">
-		<ul>
+		<ul id="menu-list">
 			<a href=""><li class="navItem">Home</li></a>
 			<a href=""><li class="navItem">Top</li></a>
 			<a href=""><li class="navItem">About</li></a>
