Added a responsive suggestion

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 
 	<main>
 		
-		<div class="infoPane" id="lastAvailable">
-			<h3 class="infoHeader">Siste tilgjengeliggjorte</h3>
+		<div class="info-pane" id="last-available">
+			<div class="info-header-wrap">
+				<h3 class="info-header">Siste tilgjengeliggjorte</h3>
+			</div>
+
 			
 			<a href="">
 			<div class="film">
@@ -63,8 +66,10 @@
 
 
 
-		<div class="infoPane" id="lastLoaned">
-			<h3 class="infoHeader">Siste lånte</h3>
+		<div class="info-pane" id="lastLoaned">
+			<div class="info-header-wrap">
+				<h3 class="infoHeader">Siste lånte</h3>
+			</div>
 
 			<a href="">
 			<div class="film">
@@ -103,9 +108,11 @@
 
 		</div>
 
-		<div class="infoPane" id="recommended">
-			<h3 class="infoHeader">Anbefalinger</h3>
-			
+		<div class="info-pane" id="recommended">
+			<div class="info-header-wrap">
+				<h3 class="infoHeader">Anbefalinger</h3>
+			</div>
+
 			<a href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
@@ -143,9 +150,10 @@
 
 		</div>
 
-		<div class="infoPane" id="routines">
-			<h3 class="infoHeader">Rutiner for lån</h3>
-			
+		<div class="info-pane" id="routines">
+			<div class="info-header-wrap">
+				<h3 class="infoHeader">Rutiner for lån</h3>
+			</div>
 			<a href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
