added movie page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</div>
 
 			
-			<a href="">
+			<a href="film1.html">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
 				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
