--- a/film1.html
+++ b/film1.html
@@ -7,7 +7,7 @@
 <body>
 	<nav class="menu">
 		<ul id="menu-list">
-			<a href=""><li class="navItem">Home</li></a>
+			<a href="index.html"><li class="navItem">Home</li></a>
 			<a href=""><li class="navItem">Top</li></a>
 			<a href=""><li class="navItem">About</li></a>
 			<li class="right-menu-item">
