added all movies

--- a/film2.html
+++ b/film2.html
@@ -27,12 +27,21 @@
 
 			<div class="filmSideInfo">
 				<p>IND 2013 (105 minutter)</p>
-				<p>Av <a class="author" href="">Oliver Nakache</a> og <a class="author" href="">Ritesh Batra</a>.</p>
-				<p>cast: 
-				<a class="author" href="">Irrfan Khan </a> 
-				<a class="author" href="">Lillete Dubey </a> 
-				<a class="author" href="">Nawazuddin Siddiqui </a>
-				<a class="author" href="">Nimrat Kaur </a></p>
+				<p>Laget av </p>
+				<ol class="crew">
+					<li><a class="author" href="">Oliver Nakache</a>, </li>
+					<li><a class="author" href="">Ritesh Batra</a></li>
+
+				</ol>
+
+				<p>cast: </p>
+				<ol class="crew">
+					<!-- <li><a class="author" href=""></a> </li> -->
+					<li><a class="author" href="">Irrfan Khan</a>, </li>
+					<li><a class="author" href="">Lillete Dubey</a>, </li>
+					<li><a class="author" href="">Nawazuddin Siddiqui</a>, </li>
+					<li><a class="author" href="">Nimrat Kaur</a>. </li>
+				</ol>
 
 				<p>Genre: romanse, komedie</p>
 				<p>Summary</p>
