--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
 			</div>
 			</a>
 
-			<a href="">
+			<a href="film3.html">
 			<div class="film">
 				<p class="filmTittel">Vår i Mummidalen</p>
 				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a href="film4.html">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
 				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a href="film5.html">
 			<div class="film">
-				<p class="filmTittel">Brian De Palma</p>
+				<p class="filmTittel">Mission: Impossible</p>
 				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
 			</div>
 			</a>
