--- a/film1.html
+++ b/film1.html
@@ -27,7 +27,14 @@
 
 			<div class="filmSideInfo">
 				<p>FAR 2011 (112 minutter)</p>
-				<p>Av <a class="author" href="">Oliver Nakache</a> og <a class="author" href="">Eric Toledano</a>.</p>
+
+				<p>Laget av </p>
+				<ol class="crew">
+					<li><a class="author" href="">Oliver Nakache</a>, </li>
+					<li><a class="author" href="">Eric Toledano</a></li>
+
+				</ol>
+
 				<p>Genre: Drama, Biografi, komedie</p>
 				<p>Summary</p>
 				<p>Den sanne historien om to menn som aldri skulle ha møtt hverandre - De Urørlige er en oppløftende komedie om vennskap, tillit og menneskelige 		muligheter.
@@ -36,6 +43,7 @@
 
 					De Urørlige er basert på en utrolig, men sann historie. Filmen, som er sett av 20 millioner franskmenn, har blitt et internasjonalt fenomen og er den mest inntjenende ikke-engelskspråklige filmen i historien. (Cover)</p>	
 				<p>Ekstra materiale:</p>
+				
 				<ol>
 					<li>Making Of</li>
 					<li>Deleted Scenes</li>	
