--- a/film3.html
+++ b/film3.html
@@ -2,22 +2,25 @@
 <head>
 	<title>INFO134</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/menu.css">
 	<link rel="stylesheet" type="text/css" href="css/film.css">
 </head>
 <body>
-	<nav class="menu">
-		<ul id="menu-list">
-			<a href="index.html"><li class="navItem">Home</li></a>
-			<a href=""><li class="navItem">Top</li></a>
-			<a href=""><li class="navItem">About</li></a>
-			<li class="right-menu-item">
-				<div id="search-wrapper">
-					<input id="search-field" type="text" name="search-field">
-					<button id="search-button">Search</button>
-				</div>
-			</li>
-		</ul>
-	</nav>
+	<header>
+		<nav class="menu">
+			<ul id="menu-list">
+				<li class="navItem"><a href="">Home</a></li>
+				<li class="navItem"><a href="">Top</a></li>
+				<li class="navItem"><a href="">About</a></li>
+				<li class="right-menu-item">
+					<div id="search-wrapper">
+						<input id="search-field" type="text" name="search-field">
+						<button id="search-button">Search</button>
+					</div>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
 	<main>
 
