--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>INFO134</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -13,16 +14,14 @@
 				<li class="navItem"><a href="">Top</a></li>
 				<li class="navItem"><a href="">About</a></li>
 				<li class="right-menu-item">
-					<div id="search-wrapper">
-						<input id="search-field" type="text" name="search-field">
-						<button id="search-button">Search</button>
-					</div>
+					<form action="./search.html" id="search-wrapper">
+						<input id="search-field" type="text" name="search-field" placeholder="Search here">
+						<input type="submit" id="search-button" value="Search">
+					</form>
 				</li>
 			</ul>
 		</nav>
 	</header>
-
-
 
 	<main>
 		
