--- a/film4.html
+++ b/film4.html
@@ -14,7 +14,7 @@
 				<li class="navItem"><a href="">About</a></li>
 				<li class="right-menu-item">
 					<div id="search-wrapper">
-						<input id="search-field" type="text" name="search-field">
+						<input id="search-field" type="text" name="search-field" placeholder="Search here">
 						<button id="search-button">Search</button>
 					</div>
 				</li>
