Changed some meta data
Changed the title of all the documents and added a tab icon

--- a/film1.html
+++ b/film1.html
@@ -1,23 +1,25 @@
 <html>
 <head>
-	<title>INFO134</title>
+	<title>The Intouchables</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/film.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
+	<link rel="icon" href="./images/film.png">
+	<!-- Icon made by Chanut is Industries from www.flaticon.com -->
 </head>
 
 <body>
 	<header>
 		<nav class="menu">
 			<ul id="menu-list">
-				<li class="navItem"><a href="">Home</a></li>
+				<li class="navItem"><a href="./">Home</a></li>
 				<li class="navItem"><a href="">Top</a></li>
 				<li class="navItem"><a href="">About</a></li>
 				<li class="right-menu-item">
-					<div id="search-wrapper">
+					<form action="./search.html" id="search-wrapper">
 						<input id="search-field" type="text" name="search-field" placeholder="Search here">
-						<button id="search-button">Search</button>
-					</div>
+						<input type="submit" id="search-button" value="Search">
+					</form>
 				</li>
 			</ul>
 		</nav>
