--- a/film3.html
+++ b/film3.html
@@ -1,15 +1,17 @@
 <html>
 <head>
-	<title>INFO134</title>
+	<title>Vår i Mummidalen</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
 	<link rel="stylesheet" type="text/css" href="css/film.css">
+	<link rel="icon" href="./images/film.png">
+	<!-- Icon made by Chanut is Industries from www.flaticon.com -->
 </head>
 <body>
 	<header>
 		<nav class="menu">
 			<ul id="menu-list">
-				<li class="navItem"><a href="">Home</a></li>
+				<li class="navItem"><a href="./">Home</a></li>
 				<li class="navItem"><a href="">Top</a></li>
 				<li class="navItem"><a href="">About</a></li>
 				<li class="right-menu-item">
