--- a/search.html
+++ b/search.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/search.css">
     <link rel="stylesheet" type="text/css" href="./css/menu.css">
+    <link rel="icon" href="./images/film.png">
+    <!-- Icon made by Chanut is Industries from www.flaticon.com -->
     <title>Search results</title>
 </head>
 <body>
     <header>
         <nav class="menu">
             <ul id="menu-list">
-                <li class="navItem"><a href="">Home</a></li>
+                <li class="navItem"><a href="./">Home</a></li>
                 <li class="navItem"><a href="">Top</a></li>
                 <li class="navItem"><a href="">About</a></li>
                 <li class="right-menu-item">
