--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>INFO134</title>
+	<title>Infomedia MediaDB</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
+	<link rel="icon" href="./images/film.png">
+	<!-- Icon made by Chanut is Industries from www.flaticon.com -->
 </head>
 
 <body>
 	<header>
 		<nav class="menu">
 			<ul id="menu-list">
-				<li class="navItem"><a href="">Home</a></li>
+				<li class="navItem"><a href="./">Home</a></li>
 				<li class="navItem"><a href="">Top</a></li>
 				<li class="navItem"><a href="">About</a></li>
 				<li class="right-menu-item">
