--- a/film2.html
+++ b/film2.html
@@ -11,9 +11,9 @@
 	<header>
 		<nav class="menu">
 			<ul id="menu-list">
-				<li class="navItem"><a href="./">Home</a></li>
-				<li class="navItem"><a href="">Top</a></li>
-				<li class="navItem"><a href="">About</a></li>
+				<li class="navItem"><a class="menuLink" href="./">Home</a></li>
+				<li class="navItem"><a class="menuLink" href="">Top</a></li>
+				<li class="navItem"><a class="menuLink" href="">About</a></li>
 				<li class="right-menu-item">
 					<div id="search-wrapper">
 						<input id="search-field" type="text" name="search-field" placeholder="Search here">
