Added meta tags for mobile

--- a/film2.html
+++ b/film2.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 	<title>The Lunchbox</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
 	<link rel="stylesheet" type="text/css" href="css/film.css">
