--- a/film2.html
+++ b/film2.html
@@ -44,10 +44,10 @@
 				<p>cast: </p>
 				<ol class="crew">
 					<!-- <li><a class="author" href=""></a> </li> -->
-					<li><a class="author" href="">Irrfan Khan</a>, </li>
-					<li><a class="author" href="">Lillete Dubey</a>, </li>
-					<li><a class="author" href="">Nawazuddin Siddiqui</a>, </li>
-					<li><a class="author" href="">Nimrat Kaur</a>. </li>
+					<li><a class="author" href="cast.html">Irrfan Khan</a>, </li>
+					<li><a class="author" href="cast.html">Lillete Dubey</a>, </li>
+					<li><a class="author" href="cast.html">Nawazuddin Siddiqui</a>, </li>
+					<li><a class="author" href="cast.html">Nimrat Kaur</a>. </li>
 				</ol>
 
 				<p>Genre: romanse, komedie</p>
