trailers and fixed movies layout

--- a/film1.html
+++ b/film1.html
@@ -31,10 +31,14 @@
 
 		<div class = "filmSideDiv">
 			<h3 class="filmSideTitle">The Intouchables</h3>
-			<img class="filmSidePic" src="filmer/Film1/The_Intouchables_1.jpg">
 
-			<iframe src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
-
+			<section class="mediaWrapper">
+				<div class="slideShow">
+					<img class="filmSidePic" src="filmer/Film1/The_Intouchables_1.jpg">
+				</div>
+				<iframe src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
+			</section>
+			
 			<div class="filmSideInfo">
 				<p>FAR 2011 (112 minutter)</p>
 
