--- a/film2.html
+++ b/film2.html
@@ -30,7 +30,14 @@
 
 		<div class = "filmSideDiv">
 			<h3 class="filmSideTitle">The Lunchbox</h3>
-			<img class="filmSidePic" src="filmer/Film2/The_Lunchbox_5.jpg">
+
+			<section class="mediaWrapper">
+				<div class="slideShow">
+					<img class="filmSidePic" src="filmer/Film2/The_Lunchbox_5.jpg">
+				</div>
+				<iframe src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
+			</section>
+			
 
 			<div class="filmSideInfo">
 				<p>IND 2013 (105 minutter)</p>
