--- a/film3.html
+++ b/film3.html
@@ -30,7 +30,14 @@
 
 		<div class = "filmSideDiv">
 			<h3 class="filmSideTitle">Vår i Mummidalen</h3>
-			<img class="filmSidePic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
+
+			<section class="mediaWrapper">
+				<div class="slideShow">
+					<img class="filmSidePic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
+				</div>
+				<iframe src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
+			</section>
+			
 
 			<div class="filmSideInfo">
 				<p>FIN 2008 (55 minutter)</p>
