--- a/film1.html
+++ b/film1.html
@@ -32,6 +32,8 @@
 		<div class = "filmSideDiv">
 			<h3 class="filmSideTitle">The Intouchables</h3>
 
+			
+
 			<section class="mediaWrapper">
 				<div class="slideShow">
 					<img class="filmSidePic" src="filmer/Film1/The_Intouchables_1.jpg">
@@ -40,6 +42,37 @@
 			</section>
 			
 			<div class="filmSideInfo">
+				<div class="stars">
+  				<form action="">
+  					<p>Rate this movie</p>
+    				<label class="starLabel">
+    					1
+    					<input class="star" id="star-5" type="radio" name="star"/>
+    				</label>
+    				
+    				<label class="starLabel">
+    					2
+    					<input class="star" id="star-4" type="radio" name="star"/>
+    				</label>
+
+    				<label class="starLabel">
+    					3
+    					<input class="star" id="star-3" type="radio" name="star"/>
+    				</label>
+
+    				<label class="starLabel">
+    					4
+    					<input class="star" id="star-2" type="radio" name="star"/>
+    				</label>
+
+    				<label class="starLabel">
+    					5
+    					<input class="star" id="star-1" type="radio" name="star"/>
+    				</label>
+    				
+   				</form>
+			</div>
+
 				<p>FAR 2011 (112 minutter)</p>
 
 				<p>Laget av </p>
@@ -62,6 +95,9 @@
 					<li>Making Of</li>
 					<li>Deleted Scenes</li>	
 				</ol>
+
+
+
 			</div>
 
 	</div>
