add to list btn

--- a/film1.html
+++ b/film1.html
@@ -71,6 +71,10 @@
     				</label>
     				
    				</form>
+
+   				<button class="add">
+   					add to list
+   				</button>
 			</div>
 
 				<p>FAR 2011 (112 minutter)</p>
