--- a/film2.html
+++ b/film2.html
@@ -69,8 +69,11 @@
     				</label>
     				
    				</form>
+   				<button class="add">
+   					add to list
+   				</button>
 			</div>
-				
+
 				<p>IND 2013 (105 minutter)</p>
 				<p>Laget av </p>
 				<ol class="crew">
