--- a/film3.html
+++ b/film3.html
@@ -69,8 +69,11 @@
     				</label>
     				
    				</form>
+   				<button class="add">
+   					add to list
+   				</button>
 			</div>
-				
+
 				<p>FIN 2008 (55 minutter)</p>
 
 				<p>Genre: animasjon, eventyr</p>
