--- a/film4.html
+++ b/film4.html
@@ -70,6 +70,9 @@
     				</label>
     				
    				</form>
+   				<button class="add">
+   					add to list
+   				</button>
 			</div>
 				<p>GBR 1975 (86 minutter)</p>
 				<p>Laget av </p>
