--- a/film5.html
+++ b/film5.html
@@ -70,8 +70,11 @@
     				</label>
     				
    				</form>
+   				<button class="add">
+   					add to list
+   				</button>
 			</div>
-				
+
 				<p>USA 1996 (105 minutter)</p>
 				<p>Laget av </p>
 				<ol class="crew">
