--- a/search.html
+++ b/search.html
@@ -7,24 +7,41 @@
     <link rel="stylesheet" type="text/css" href="./css/menu.css">
     <link rel="icon" href="./images/film.png">
     <!-- Icon made by Chanut is Industries from www.flaticon.com -->
+
+    <script src="https://use.fontawesome.com/db87107c26.js"></script>
+    <script src="./javascript/jquery.js" type="text/javascript"></script>
+    <script src="./javascript/menu.js" type="text/javascript"></script>
     <title>Search results</title>
 </head>
 <body>
-    <header>
-        <nav class="menu">
-            <ul id="menu-list">
-                <li class="navItem"><a href="./">Home</a></li>
-                <li class="navItem"><a href="">Top</a></li>
-                <li class="navItem"><a href="">About</a></li>
-                <li class="right-menu-item">
-                    <form action="./search.html" id="search-wrapper">
-                        <input id="search-field" type="text" name="search-field" placeholder="Search here">
-                        <input type="submit" id="search-button" value="Search">
-                    </form>
-                </li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <nav class="menu">
+        <ul id="menu-list">
+            <li id="logo-list-item"><a href="#"><img id="logo" src="./images/film.png"></a></li>
+            <li class="navItem"><a class="menuLink" href="./">Home</a></li>
+            <li class="navItem"><a class="menuLink" href="">Top</a></li>
+            <li class="navItem"><a class="menuLink" href="">About</a></li>
+            <li class="right-menu-item">
+                <form action="./search.html" id="search-wrapper">
+                    <input id="search-field" type="text" name="search-field" placeholder="Search here">
+                    <input type="submit" id="search-button" value="Search">
+                </form>
+            </li>
+            <li class="right-menu-item" id="drop-down"><i onclick="show_menu()" class="fa fa-bars fa-2x" aria-hidden="true"></i></li>
+        </ul>
+    </nav>
+    <nav class="mobile-navigation">
+        <ul id="mobile-menu-list">
+            <li class="mobile-menu-item">Home</li>
+            <li class="mobile-menu-item">Top</li>
+            <li class="mobile-menu-item">About</li>
+        </ul>
+        <ul class="mobile-menu-list-bottom">
+            <li class="mobile-menu-item">abc123</li>
+            <li class="mobile-menu-item">Logout</li>
+        </ul>
+    </nav>
+</header>
 
     <main>
         <section id="search-info">
@@ -108,19 +125,16 @@
 </body>
 
 <script>
-    function getParameterByName(name, url) {
-        if (!url) {
-            url = window.location.href;
-        }
-        name = name.replace(/[\[\]]/g, "\\$&");
-        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-                results = regex.exec(url);
-        if (!results) return '';
-        if (!results[2]) return '';
-        return decodeURIComponent(results[2].replace(/\+/g, " "));
+
+
+
+    function getSearchQuery(){
+        url = window.location.href;
+        var input = url.split('?search-field=');
+        return encodeURIComponent(input[1]);
     }
 
-    var url_param = getParameterByName('search-field');
+    var url_param = getSearchQuery();
     if(url_param != ''){
         document.getElementById('search-input').innerHTML = url_param;
     }
