--- a/index.html
+++ b/index.html
@@ -48,35 +48,39 @@
 			</div>
 
 			
-			<a href="film1.html">
+			<a class="filmLink" href="film1.html">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
-				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a href="film2.html">
+			<a class="filmLink" href="film2.html">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
-				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a href="film3.html">
+			<a class="filmLink" href="film3.html">
 			<div class="film">
 				<p class="filmTittel">Vår i Mummidalen</p>
 				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
 			</div>
 			</a>
 
-			<a href="film4.html">
+			<a class="filmLink" href="film4.html">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
 				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
 			</div>
 			</a>
 
-			<a href="film5.html">
+			<a class="filmLink" href="film5.html">
 			<div class="film">
 				<p class="filmTittel">Mission: Impossible</p>
 				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
@@ -92,35 +96,35 @@
 				<h3 class="infoHeader">Siste lånte</h3>
 			</div>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
 				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
 				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Vår i Mummidalen</p>
 				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
 				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Brian De Palma</p>
 				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
@@ -134,35 +138,35 @@
 				<h3 class="infoHeader">Anbefalinger</h3>
 			</div>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
 				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
 				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Vår i Mummidalen</p>
 				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
 				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Brian De Palma</p>
 				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
@@ -175,35 +179,35 @@
 			<div class="info-header-wrap">
 				<h3 class="infoHeader">Rutiner for lån</h3>
 			</div>
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
 				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
 				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Vår i Mummidalen</p>
 				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
 				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
 			</div>
 			</a>
 
-			<a href="">
+			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Brian De Palma</p>
 				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
