resized images on index

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
 				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
+					<img class="filmPic" src="filmer/Film2/The_Lunchbox_4.jpg">
 				</div>
 			</div>
 			</a>
@@ -76,14 +76,18 @@
 			<a class="filmLink" href="film4.html">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
-				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+				</div>
 			</div>
 			</a>
 
 			<a class="filmLink" href="film5.html">
 			<div class="film">
 				<p class="filmTittel">Mission: Impossible</p>
-				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+				<div class="filmDivPic">	
+					<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+				</div>
 			</div>
 			</a>
 
