--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 	</header>
 
 	<main>
-		
+		<div class="info-header-wrap">
+			<h3 class="infoHeader">Siste tilgjengeliggjorte<span class="scroll-for-more">Scroll -></span></h3>
+		</div>
 		<div class="info-pane" id="last-available">
-			<div class="info-header-wrap">
-				<h3 class="info-header">Siste tilgjengeliggjorte</h3>
-			</div>
+			
 
 			
 			<a class="filmLink" href="film1.html">
@@ -90,12 +90,11 @@
 		</div>
 
 
-
+		<div class="info-header-wrap">
+			<h3 class="infoHeader">Siste lånte<span class="scroll-for-more">Scroll -></span></h3>
+		</div>
 		<div class="info-pane" id="lastLoaned">
-			<div class="info-header-wrap">
-				<h3 class="infoHeader">Siste lånte</h3>
-			</div>
-
+		
 			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
@@ -132,11 +131,11 @@
 			</a>
 
 		</div>
-
+		<div class="info-header-wrap">
+			<h3 class="infoHeader">Anbefalinger<span class="scroll-for-more">Scroll -></span></h3>
+		</div>
 		<div class="info-pane" id="recommended">
-			<div class="info-header-wrap">
-				<h3 class="infoHeader">Anbefalinger</h3>
-			</div>
+			
 
 			<a class="filmLink" href="">
 			<div class="film">
@@ -174,11 +173,11 @@
 			</a>
 
 		</div>
-
+		<div class="info-header-wrap">
+			<h3 class="infoHeader">Rutiner for lån</h3>
+		</div>
 		<div class="info-pane" id="routines">
-			<div class="info-header-wrap">
-				<h3 class="infoHeader">Rutiner for lån</h3>
-			</div>
+			
 			<a class="filmLink" href="">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
