--- a/film1.html
+++ b/film1.html
@@ -59,34 +59,34 @@
   				<form action="">
   					<p>Rate this movie</p>
     				<label class="starLabel">
-    					1
+    					☆
     					<input class="star" id="star-5" type="radio" name="star"/>
     				</label>
     				
     				<label class="starLabel">
-    					2
+    					☆
     					<input class="star" id="star-4" type="radio" name="star"/>
     				</label>
 
     				<label class="starLabel">
-    					3
+    					☆
     					<input class="star" id="star-3" type="radio" name="star"/>
     				</label>
 
     				<label class="starLabel">
-    					4
+    					☆
     					<input class="star" id="star-2" type="radio" name="star"/>
     				</label>
 
     				<label class="starLabel">
-    					5
+    					☆
     					<input class="star" id="star-1" type="radio" name="star"/>
     				</label>
     				
    				</form>
 
    				<button class="add">
-   					add to list
+   					+List
    				</button>
 			</div>
 
