--- a/film1.html
+++ b/film1.html
@@ -50,9 +50,9 @@
 
 			<section class="mediaWrapper">
 				<div class="slideShow">
-					<img class="filmSidePic" src="filmer/Film1/The_Intouchables_1.jpg">
+					<img alt="picture of the movie" class="filmSidePic" src="filmer/Film1/The_Intouchables_1.jpg">
 				</div>
-				<iframe src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
+				<iframe alt="youtube trailer for the movie" src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
 			</section>
 			
 			<div class="filmSideInfo">
