--- a/film2.html
+++ b/film2.html
@@ -47,9 +47,9 @@
 
 			<section class="mediaWrapper">
 				<div class="slideShow">
-					<img class="filmSidePic" src="filmer/Film2/The_Lunchbox_5.jpg">
+					<img alt="picture of the movie" class="filmSidePic" src="filmer/Film2/The_Lunchbox_5.jpg">
 				</div>
-				<iframe src="https://www.youtube.com/embed/xwYN-XS92yY"></iframe>
+				<iframe alt="youtube trailer for the movie" src="https://www.youtube.com/embed/xwYN-XS92yY"></iframe>
 			</section>
 			
 
