--- a/film5.html
+++ b/film5.html
@@ -47,9 +47,9 @@
 
 			<section class="mediaWrapper">
 				<div class="slideShow">
-					<img class="filmSidePic" src="filmer/Film5/mi_2.jpg">	
+					<img alt="picture of the movie" class="filmSidePic" src="filmer/Film5/mi_2.jpg">	
 				</div>
-				<iframe src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
+				<iframe alt="youtube trailer for the movie" src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
 			</section>
 			
 
