--- a/film2.html
+++ b/film2.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<nav class="menu">
-		<a href="index.html" id="logo-link"><img id="logo" src="./images/film.png"></a>
+		<a alt="logo" href="index.html" id="logo-link"><img id="logo" src="./images/film.png"></a>
 		
 		<div id="mobile-wrapper">
 			<form action="./search.html" id="search-wrapper">
