--- a/film1.html
+++ b/film1.html
@@ -18,7 +18,7 @@
 <body>
 	<header>
 		<nav class="menu">
-		<a alt="logo" href="index.html" id="logo-link"><img id="logo" src="./images/film.png"></a>
+		<a href="index.html" id="logo-link"><img alt="logo" id="logo" src="./images/film.png"></a>
 		
 		<div id="mobile-wrapper">
 			<form action="./search.html" id="search-wrapper">
@@ -52,12 +52,12 @@
 				<div class="slideShow">
 					<img alt="picture of the movie" class="filmSidePic" src="filmer/Film1/The_Intouchables_1.jpg">
 				</div>
-				<iframe alt="youtube trailer for the movie" src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
+				<iframe src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
 			</section>
 			
 			<div class="filmSideInfo">
 				<div class="stars">
-  				<form action="">
+  				<form action="#">
   					<p>Rate this movie</p>
     				<label class="starLabel">
     					☆
