--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="menu">
-        <a href="index.html" id="logo-link"><img id="logo" src="./images/film.png"></a>
+        <a href="index.html" id="logo-link"><img id="logo" src="./images/film.png" alt="An image of a filmroll used as a logo"></a>
         
         <div id="mobile-wrapper">
             <form action="./search.html" id="search-wrapper">
@@ -48,7 +48,7 @@
         <div id="search-results">
             <section class="search-item">
                 <div class="img-wrapper">
-                    <img class="search-image" src="filmer/Film1/The_Intouchables_3.jpg">
+                    <img class="search-image" src="filmer/Film1/The_Intouchables_3.jpg" alt="The untouchables movie cover.">
                 </div>                <section class="information">
                     <h3>Title</h3>
                     <p>A longer description of the movie is going here.</p>
@@ -57,7 +57,7 @@
 
             <section class="search-item">
                 <div class="img-wrapper">
-                    <img class="search-image" src="filmer/Film2/The_Lunchbox_1.jpg">
+                    <img class="search-image" src="filmer/Film2/The_Lunchbox_1.jpg" alt="The lunchbox movie cover.">
                 </div>
                 <section class="information">
                     <h3>Title</h3>
@@ -67,7 +67,7 @@
 
             <section class="search-item">
                 <div class="img-wrapper">
-                    <img class="search-image" src="filmer/Film3/Vaar_i_mummidalen_1.jpg">
+                    <img class="search-image" src="filmer/Film3/Vaar_i_mummidalen_1.jpg" alt="Vår i mummidalen movie cover.">
                 </div>
                 <section class="information">
                     <h3>Title</h3>
@@ -77,7 +77,7 @@
 
             <section class="search-item">
                 <div class="img-wrapper">
-                    <img class="search-image" src="filmer/Film4/montypythonandtheholygrail_1.jpg">
+                    <img class="search-image" src="filmer/Film4/montypythonandtheholygrail_1.jpg" alt="Monty python movie cover.">
                 </div>
                 <section class="information">
                     <h3>Title</h3>
@@ -87,7 +87,7 @@
 
             <section class="search-item">
                 <div class="img-wrapper">
-                    <img class="search-image" src="filmer/Film5/mi_1.jpg">
+                    <img class="search-image" src="filmer/Film5/mi_1.jpg" alt="Mission impssible movie cover.">
                 </div>
                 <section class="information">
                     <h3>Title</h3>
@@ -97,7 +97,7 @@
 
             <section class="search-item">
                 <div class="img-wrapper">
-                    <img class="search-image" src="filmer/Film6/Minority_Report_3.jpg">
+                    <img class="search-image" src="filmer/Film6/Minority_Report_3.jpg" alt="Miniroty report movie cover.">
                 </div>
                 <section class="information">
                     <h3>Title</h3>
@@ -107,7 +107,7 @@
 
             <section class="search-item">
                 <div class="img-wrapper">
-                    <img class="search-image" src="filmer/Film7/valkyrie_1.jpg">
+                    <img class="search-image" src="filmer/Film7/valkyrie_1.jpg" alt="Valkyrie movie cover.">
                 </div>
                 <section class="information">
                     <h3>Title</h3>
@@ -118,7 +118,6 @@
         </div>
 
     </main>
-</body>
 
 <script>
     function getSearchQuery(){
@@ -132,4 +131,6 @@
         document.getElementById('search-input').innerHTML = url_param;
     }
 </script>
+</body>
+
 </html>
