--- a/cast.html
+++ b/cast.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/search.css">
     <link rel="stylesheet" type="text/css" href="./css/menu.css">
+    <link rel="stylesheet" type="text/css" href="./css/menu.css">
+    <link rel="stylesheet" type="text/css" href="./css/search.css">
     <link rel="icon" href="./images/film.png">
     <!-- Icon made by Chanut is Industries from www.flaticon.com -->
     <title>Search results</title>
@@ -12,17 +13,26 @@
 <body>
     <header>
         <nav class="menu">
-            <ul id="menu-list">
-                <li class="navItem"><a href="./">Home</a></li>
-                <li class="navItem"><a href="">Top</a></li>
-                <li class="navItem"><a href="">About</a></li>
-                <li class="right-menu-item">
-                    <form action="./search.html" id="search-wrapper">
-                        <input id="search-field" type="text" name="search-field" placeholder="Search here">
-                        <input type="submit" id="search-button" value="Search">
-                    </form>
+        <a href="index.html" id="logo-link"><img id="logo" src="./images/film.png" alt="An image of a filmroll used as a logo"></a>
+        
+        <div id="mobile-wrapper">
+            <form action="./search.html" id="search-wrapper">
+                <input id="search-field" type="text" name="search-field" placeholder="Search here">
+                <input type="submit" id="search-button" value="Search">
+            </form>
+            <i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
+        </div>
+            <ul class="menu-list">
+                <li class="navItem"><a class="menuLink" href="./">Home</a></li>
+                <li class="navItem"><a class="menuLink" href="">Top</a></li>
+                <li class="navItem"><a class="menuLink" href="">About</a></li>
+                <li class="right-menu-item"> 
+                    <ul>
+                        <li class="navItem"><a class="menuLink" href="./">abc123</a></li>
+                        <li class="navItem"><a class="menuLink" href="./">Logout</a></li>
+                    </ul>
                 </li>
-            </ul>
+            </ul>           
         </nav>
     </header>
 
@@ -107,23 +117,4 @@
 
     </main>
 </body>
-
-<script>
-    function getParameterByName(name, url) {
-        if (!url) {
-            url = window.location.href;
-        }
-        name = name.replace(/[\[\]]/g, "\\$&");
-        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-                results = regex.exec(url);
-        if (!results) return '';
-        if (!results[2]) return '';
-        return decodeURIComponent(results[2].replace(/\+/g, " "));
-    }
-
-    var url_param = getParameterByName('search-field');
-    if(url_param != ''){
-        document.getElementById('search-input').innerHTML = url_param;
-    }
-</script>
 </html>
