Fixed the search bug

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</form>
 			<i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
 		</div>
-			<ul class="menu-list">
+			<ul id="menu-list">
 				<li class="navItem"><a class="menuLink" href="./">Home</a></li>
 				<li class="navItem"><a class="menuLink" href="">Top</a></li>
 				<li class="navItem"><a class="menuLink" href="">About</a></li>
