--- a/search.html
+++ b/search.html
@@ -9,7 +9,6 @@
     <!-- Icon made by Chanut is Industries from www.flaticon.com -->
 
     <script src="https://use.fontawesome.com/db87107c26.js"></script>
-    <script src="./javascript/jquery.js" type="text/javascript"></script>
     <script src="./javascript/menu.js" type="text/javascript"></script>
 
     <script src="./javascript/genres.js"type="text/javascript"></script>
@@ -50,7 +49,6 @@
     <main>
         <section id="search-info">
             <h3>You searched for: <span id="search-input">"Some search input"</span></h3>
-            <p>Number of results: 7</p>
         </section>
 
             <form id="search" action="search_results.html" method="get">
@@ -105,7 +103,7 @@
                     
                 </table>
             </details>  
-            <p id="numberOfResults"></p>
+            <p> <span class="numberOfResults"></span> results</p>
         </fieldset>
         <input type="button" id="submit_search" value="Søk" onclick="do_advanced_search()">
     </form>
@@ -114,13 +112,14 @@
          
 
         </div>
-        <button id="loadMoreButton" onclick="load_more(10)">Load more</button>
+        <button id="loadMoreButton" onclick="load_more()">Load more</button>
+        <p>Showing <span id="shown-images">0</span> of <span class="numberOfResults"></span> images</p>
     </main>
 
 <script>
     function getSearchQuery(){
         url = window.location.href;
-        var input = url.split('?search-field=');
+        var input = url.split('?film_title=');
         return encodeURIComponent(input[1]);
     }
 
