--- a/show_movie.html
+++ b/show_movie.html
@@ -2,12 +2,12 @@
 <html>
   <meta charset="utf-8"/>
   <head>
-    <script type="text/javascript" src="script/object.js"></script>
-    <script type="text/javascript" src="script/genres.js"></script>
-    <script type="text/javascript" src="script/image.js"></script>
-    <script type="text/javascript" src="script/reviews.js"></script>
-    <script type="text/javascript" src="script/query_params.js"></script>
-    <script type="text/javascript" src="script/show_movie.js"></script>
+    <script type="text/javascript" src="javascript/object.js"></script>
+    <script type="text/javascript" src="javascript/genres.js"></script>
+    <script type="text/javascript" src="javascript/image.js"></script>
+    <script type="text/javascript" src="javascript/reviews.js"></script>
+    <script type="text/javascript" src="javascript/query_params.js"></script>
+    <script type="text/javascript" src="javascript/show_movie.js"></script>
     <style type="text/css">
       img{
         max-height: 150px;
