--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<!-- Icon made by Chanut is Industries from www.flaticon.com -->
 
 	<script src="https://use.fontawesome.com/db87107c26.js"></script>
-	<script src="./javascript/jquery.js" type="text/javascript"></script>
 	<script src="./javascript/menu.js" type="text/javascript"></script>
 </head>
 
@@ -26,7 +25,7 @@
 			</form>
 			<i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
 		</div>
-			<ul id="menu-list">
+			<ul class="menu-list">
 				<li class="navItem"><a class="menuLink" href="./">Home</a></li>
 				<li class="navItem"><a class="menuLink" href="">Top</a></li>
 				<li class="navItem"><a class="menuLink" href="">About</a></li>
