integrated categories.html and reviews.html

--- a/categories.html
+++ b/categories.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/drop.css">
-    <script type="text/javascript" src ="script/query_params.js"></script>
-    <script type="text/javascript" src="script/categories.js"></script>
-    <script type="text/javascript" src="script/object.js"></script>
-    <script type="text/javascript" src="script/genres.js"></script>
-    <script type="text/javascript" src="script/style.js"></script>
+    <script type="text/javascript" src="javascript/query_params.js"></script>
+    <script type="text/javascript" src="javascript/categories.js"></script>
+    <script type="text/javascript" src="javascript/object.js"></script>
+    <script type="text/javascript" src="javascript/genres.js"></script>
+    <script type="text/javascript" src="javascript/style.js"></script>
 </head>
 <body>
 <!-- Pretty dropdown menu for categories -->
