--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 				<li class="navItem"><a class="menuLink" href="./">Home</a></li>
 				<li class="navItem"><a class="menuLink" href="">Top</a></li>
 				<li class="navItem"><a class="menuLink" href="">About</a></li>
+				<li class="navItem"><a class="menuLink" href="categories.html">Categories</a></li>
 				<li class="right-menu-item"> 
 					<ul>
 						<li class="navItem"><a class="menuLink" href="./">abc123</a></li>
