--- a/show_movie.html
+++ b/show_movie.html
@@ -38,6 +38,7 @@
         <li class="navItem"><a class="menuLink" href="./">Home</a></li>
         <li class="navItem"><a class="menuLink" href="">Top</a></li>
         <li class="navItem"><a class="menuLink" href="">About</a></li>
+        <li class="navItem"><a class="menuLink" href="categories.html">Categories</a></li>
         <li class="right-menu-item"> 
           <ul>
             <li class="navItem"><a class="menuLink" href="./">abc123</a></li>
@@ -79,6 +80,7 @@
             <h3>Rating</h3>
             <h4 id="rating"></h4>
             <button id="add_to_list" title="Add movie to your list.">+List</button>  
+            <a href="review.html">Reviewo</a>
           </section>
 
           <!-- Director(s) -->
