--- a/review.html
+++ b/review.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>kek</title>
+	<title>Write Review</title>
 </head>
 <body>
+	<!-- This page only contains a section with a post form for future functionality. Currently there is nothing going on in this file. -->
 	<section id="review_section">
 		<form id="review_form" method="post" action="#">
 			<input type="radio" name="rating" value="1" for="film_rating" id="review_rating">1
