style done for categories.html and review.html

--- a/categories.html
+++ b/categories.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Categories</title>
+    <meta charset="utf-8">
     <script type="text/javascript" src="javascript/query_params.js"></script>
     <script type="text/javascript" src="javascript/categories.js"></script>
     <script type="text/javascript" src="javascript/object.js"></script>
