comments and removed unused files

--- a/review.html
+++ b/review.html
@@ -1,3 +1,4 @@
+<!-- Page for letting the user write a review on a movie. -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/review.css">
 </head>
 <body>
+    <!-- Menu and navigation. -->
 	<header>
     <nav class="menu">
         <a href="index.html" id="logo-link"><img alt="logo" id="logo" src="./images/film.png"></a>
@@ -33,7 +35,8 @@
             </ul>     
         </nav>
     </header>
-	<!-- This page only contains a section with a post form for future functionality. Currently there is nothing going on in this file. -->
+
+    <!-- Section for a rating form. Form contains 5 rating 'buttons', textarea and btn. -->
 	<section id="review_section">
 		<form id="review_form" method="post" action="#">
 			<textarea cols="50" rows="10" placeholder="Write review here .."></textarea>
